--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name:     Twenty Twelve Child
- Theme URI:      http://michaelryanmcneill.com/404-error/
+ Theme URI:      http://michaelryanmcneill.com/
  Description:    Twenty Twelve Child Theme
  Author:         Michael McNeill
  Author URI:     http://michaelryanmcneill.com
